control-plane/03-cni/cilium/gateway/examples/gatewayClass.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: cilium-gateway
spec:
  gatewayClassName: cilium
  listeners:
    - name: web
      protocol: HTTP
      port: 80 # 开启特权端口参数才能使用1023以下的端口
