control-plane/03-cni/cilium/gateway/examples/l7-https-gatewayClass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-gateway
  annotations:
    # 让 cert-manager 自动为你生成默认的网关根证书, 必须预先创建对应的issuer
    cert-manager.io/issuer: ca-issuer
spec:
  gatewayClassName: cilium
  # Cilium Gateway 支持 Gateway API 规范提供的地址 。spec.addresses 字段用于指定网关的 IP 地址。
  #该功能仅支持 IPAddress 类型的地址，并适用于 LB-IPAM。有关详细信息，请参阅 LoadBalancer IP 地址管理 （LB IPAM）。
  addresses:
    - type: IPAddress
      value: 192.168.3.110
  listeners:
    #    - allowedRoutes:
    #        namespaces:
    #          from: Same
    - name: http
      # 开启特权端口参数才能使用1023以下的端口
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All # 允许所有 Namespace 的 HTTPRoute 挂载到这
    - name: https
      # 开启特权端口参数才能使用1023以下的端口
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All # 允许所有 Namespace 的 HTTPRoute/GRPCRoute/TLSRoutes 挂载到这
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: global-default-tls
